# Testiq

./: .gitignore  README.md
.testpilot/db/: chroma.sqlite3
docs/: ARCHITECTURE.md
src/: cli.py  config.py
src/parser/: language_registry.py
src/rag/: indexer.py
testiq/: pyproject.toml
testiq/src/: __init__.py  cli.py
testiq/src/parser/: __init__.py  base_parser.py
testiq/src/parser/languages/: __init__.py  python_parser.py
testiq/src/prompts/: __init__.py  templates.py
testiq/src/rag/: __init__.py  retriever.py
testiq/src/validator/: __init__.py  test_validator.py
testiq/src/workflows/: __init__.py  explain.py  generate.py  scan.py
testiq/tests/: __init__.py  test_cli.py
tests/: test_python_parser.py  test_rag.py  test_workflows.py
