[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testiq"
version = "0.1.0"
description = "CLI tool that uses local LLMs and RAG to auto-generate unit tests and explain failing tests."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TestIQ Contributors"},
]

dependencies = [
    "typer[all]>=0.9.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "pydantic>=2.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
testiq = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
